게시판 페이징

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.datasource.password=1234
 #mybatis
 mybatis.mapper-locations:classpath:sqlmapper/*.xml  
 mybatis.configuration.map-underscore-to-camel-case=true 
-mybatis.type-aliases-package=com.example.back.model
+mybatis.type-aliases-package=com.example.pagestudy.model
 
 #서버재가동
 spring.devtools.livereload.enabled=true
